Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/T8139255.out
T8139255.java:13:15: compiler.err.override.incompatible.ret: (compiler.misc.cant.hide: func(), T8139255_1, func(), T8139255), int, void
1 error
